--- a/.github/workflows/local-deployment.yml
+++ b/.github/workflows/local-deployment.yml
@@ -166,7 +166,7 @@ jobs:
 
           }
 
-  build-package:
+    build-package:
     name: Build Deployment Package
     runs-on: ubuntu-latest
     needs: test-api
@@ -181,6 +181,13 @@ jobs:
           FILES="deployment/ requirements.txt requirements-deploy.txt"
           tar -czf mlops-deployment-${{ github.run_number }}.tar.gz $FILES
           ls -lh mlops-deployment-${{ github.run_number }}.tar.gz
+
+      - name: Upload Deployment Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: mlops-deployment-package
+          path: mlops-deployment-*.tar.gz
+
 
   notify:
     name: Notify
