--- a/dev_env/experiments_config.yml
+++ b/dev_env/experiments_config.yml
@@ -1,174 +1,188 @@
-# 🎯 RANDOM FOREST EXPERIMENTS CONFIGURATION
+models:
 
-experiment:
-  name: "credit_risk_rf_experiment"   
+  # 🌲 RANDOM FOREST CONFIGURATION
 
-experiments:
-  
-  # BASELINE - Balanced Configuration
- 
-  - name: "rf_baseline_balanced"
-    params:
-      n_estimators: 200
-      max_depth: 15
-      min_samples_split: 20
-      min_samples_leaf: 10
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.8
-      class_weight: "balanced"
-      criterion: "gini"
-      random_state: 42
-      n_jobs: -1
-  
-  # HIGH RECALL - Minimize False Negatives (Critical for Credit Risk)
- 
-  - name: "rf_high_recall"
-    params:
-      n_estimators: 300
-      max_depth: 20
-      min_samples_split: 10
-      min_samples_leaf: 5
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.85
-      class_weight: "balanced_subsample"
-      criterion: "gini"
-      random_state: 42
-      n_jobs: -1
+  random_forest:
+    experiment_name: "credit_risk_rf_experiment"
+    primary_metric: "recall"
 
-  # HIGH PRECISION - Minimize False Positives
+    experiments:
 
-  - name: "rf_high_precision"
-    params:
-      n_estimators: 250
-      max_depth: 12
-      min_samples_split: 30
-      min_samples_leaf: 15
-      max_features: 0.4
-      bootstrap: true
-      max_samples: 0.75
-      class_weight: "balanced"
-      criterion: "gini"
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_baseline_balanced"
+        params:
+          n_estimators: 200
+          max_depth: 15
+          min_samples_split: 20
+          min_samples_leaf: 10
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.8
+          class_weight: "balanced"
+          criterion: "gini"
+          random_state: 42
+          n_jobs: -1
 
-  # DEEP ENSEMBLE - Complex Patterns
+      - name: "rf_high_recall"
+        params:
+          n_estimators: 300
+          max_depth: 20
+          min_samples_split: 10
+          min_samples_leaf: 5
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.85
+          class_weight: "balanced_subsample"
+          criterion: "gini"
+          random_state: 42
+          n_jobs: -1
 
-  - name: "rf_deep_ensemble"
-    params:
-      n_estimators: 400
-      max_depth: 25
-      min_samples_split: 5
-      min_samples_leaf: 2
-      max_features: "log2"
-      bootstrap: true
-      max_samples: 0.9
-      class_weight: "balanced_subsample"
-      criterion: "entropy"
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_high_precision"
+        params:
+          n_estimators: 250
+          max_depth: 12
+          min_samples_split: 30
+          min_samples_leaf: 15
+          max_features: 0.4
+          bootstrap: true
+          max_samples: 0.75
+          class_weight: "balanced"
+          criterion: "gini"
+          random_state: 42
+          n_jobs: -1
 
-  # REGULARIZED - Prevent Overfitting
-  
-  - name: "rf_regularized"
-    params:
-      n_estimators: 200
-      max_depth: 10
-      min_samples_split: 50
-      min_samples_leaf: 20
-      max_features: 0.3
-      bootstrap: true
-      max_samples: 0.7
-      class_weight: "balanced"
-      criterion: "gini"
-      max_leaf_nodes: 100
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_deep_ensemble"
+        params:
+          n_estimators: 400
+          max_depth: 25
+          min_samples_split: 5
+          min_samples_leaf: 2
+          max_features: "log2"
+          bootstrap: true
+          max_samples: 0.9
+          class_weight: "balanced_subsample"
+          criterion: "entropy"
+          random_state: 42
+          n_jobs: -1
 
-  # PRODUCTION OPTIMIZED - Speed + Accuracy Balance
-  
-  - name: "rf_production"
-    params:
-      n_estimators: 150
-      max_depth: 18
-      min_samples_split: 15
-      min_samples_leaf: 8
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.8
-      class_weight: "balanced"
-      criterion: "gini"
-      random_state: 42
-      n_jobs: -1
-      warm_start: false
-      oob_score: true
+      - name: "rf_regularized"
+        params:
+          n_estimators: 200
+          max_depth: 10
+          min_samples_split: 50
+          min_samples_leaf: 20
+          max_features: 0.3
+          bootstrap: true
+          max_samples: 0.7
+          class_weight: "balanced"
+          criterion: "gini"
+          max_leaf_nodes: 100
+          random_state: 42
+          n_jobs: -1
 
-  # EXTREME ENSEMBLE - Maximum Diversity
-  
-  - name: "rf_extreme_ensemble"
-    params:
-      n_estimators: 500
-      max_depth: 30
-      min_samples_split: 2
-      min_samples_leaf: 1
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.95
-      class_weight: "balanced_subsample"
-      criterion: "entropy"
-      min_impurity_decrease: 0.0001
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_production"
+        params:
+          n_estimators: 150
+          max_depth: 18
+          min_samples_split: 15
+          min_samples_leaf: 8
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.8
+          class_weight: "balanced"
+          criterion: "gini"
+          random_state: 42
+          n_jobs: -1
+          warm_start: false
+          oob_score: true
 
-  # COST-SENSITIVE - Custom Class Weights
+      - name: "rf_extreme_ensemble"
+        params:
+          n_estimators: 500
+          max_depth: 30
+          min_samples_split: 2
+          min_samples_leaf: 1
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.95
+          class_weight: "balanced_subsample"
+          criterion: "entropy"
+          min_impurity_decrease: 0.0001
+          random_state: 42
+          n_jobs: -1
 
-  - name: "rf_cost_sensitive"
-    params:
-      n_estimators: 250
-      max_depth: 16
-      min_samples_split: 20
-      min_samples_leaf: 10
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.8
-      class_weight: {0: 1, 1: 3}
-      criterion: "gini"
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_cost_sensitive"
+        params:
+          n_estimators: 250
+          max_depth: 16
+          min_samples_split: 20
+          min_samples_leaf: 10
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.8
+          class_weight: {0: 1, 1: 3}
+          criterion: "gini"
+          random_state: 42
+          n_jobs: -1
 
-  # LIGHTWEIGHT - Fast Inference
+      - name: "rf_lightweight"
+        params:
+          n_estimators: 100
+          max_depth: 12
+          min_samples_split: 25
+          min_samples_leaf: 12
+          max_features: "sqrt"
+          bootstrap: true
+          max_samples: 0.75
+          class_weight: "balanced"
+          criterion: "gini"
+          max_leaf_nodes: 50
+          random_state: 42
+          n_jobs: -1
 
-  - name: "rf_lightweight"
-    params:
-      n_estimators: 100
-      max_depth: 12
-      min_samples_split: 25
-      min_samples_leaf: 12
-      max_features: "sqrt"
-      bootstrap: true
-      max_samples: 0.75
-      class_weight: "balanced"
-      criterion: "gini"
-      max_leaf_nodes: 50
-      random_state: 42
-      n_jobs: -1
+      - name: "rf_tuned_champion"
+        params:
+          n_estimators: 350
+          max_depth: 22
+          min_samples_split: 12
+          min_samples_leaf: 6
+          max_features: 0.6
+          bootstrap: true
+          max_samples: 0.85
+          class_weight: "balanced_subsample"
+          criterion: "gini"
+          min_impurity_decrease: 0.00005
+          max_leaf_nodes: 200
+          random_state: 42
+          n_jobs: -1
+          oob_score: true
 
-  # EXPERIMENTAL - Grid Search Winner Approximation
+  # 🚀 XGBOOST CONFIGURATION
 
-  - name: "rf_tuned_champion"
-    params:
-      n_estimators: 350
-      max_depth: 22
-      min_samples_split: 12
-      min_samples_leaf: 6
-      max_features: 0.6
-      bootstrap: true
-      max_samples: 0.85
-      class_weight: "balanced_subsample"
-      criterion: "gini"
-      min_impurity_decrease: 0.00005
-      max_leaf_nodes: 200
-      random_state: 42
-      n_jobs: -1
-      oob_score: true
+  xgboost:
+    experiment_name: "credit_risk_xgb_experiment"
+    primary_metric: "recall"
+
+    experiments:
+
+      - name: "xgb_baseline"
+        params:
+          n_estimators: 300
+          max_depth: 6
+          learning_rate: 0.1
+          subsample: 0.8
+          colsample_bytree: 0.8
+          objective: "binary:logistic"
+          eval_metric: "auc"
+          random_state: 42
+
+      - name: "xgb_high_recall"
+        params:
+          n_estimators: 400
+          max_depth: 8
+          learning_rate: 0.05
+          subsample: 0.9
+          colsample_bytree: 0.9
+          scale_pos_weight: 2
+          objective: "binary:logistic"
+          eval_metric: "auc"
+          random_state: 42
